# TCPVideoChatQT

./: README.md
QTClient/: AudioProcessor.cpp  AudioProcessor.h  CMakelists.txt  KeyEventFilter.cpp  KeyEventFilter.h  NativeFrameLabel.cpp  NativeFrameLabel.h  PopUpNotification.cpp  PopUpNotification.h  PopUpNotification.ui  TCPClient.cpp  TCPClient.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTClient/Application/: CMakeLists.txt  main.cpp
QTClient/Controllers/: CMakeLists.txt  Common.h  MainController.cpp  MainController.h  MainWindowController.cpp  MainWindowController.h  SettingsWindowContoller.cpp  SettingsWindowContoller.h
QTClient/Core/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  Detector.cpp  Detector.h  FaceDetector.cpp  FaceDetector.h  FaceLandmarkDetector.cpp  FaceLandmarkDetector.h  HaarCascadeDetector.cpp  HaarCascadeDetector.h  InformationStrings.h  NativeFrameLabel.cpp  NativeFrameLabel.h  SharedQueue.h  TCPClient.cpp  TCPClient.h
QTClient/FFmpegLib/: CMakeLists.txt  H264Decoder.cpp  H264Decoder.h  H264Encoder.cpp  H264Encoder.h
QTClient/Ui/: CMakelists.txt  DialogAboutProgrammName.cpp  DialogAboutProgrammName.h  DialogAboutProgrammName.ui  ListItem.cpp  ListItem.h  PopUpNotification.cpp  PopUpNotification.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
TCPClient/: CMakeLists.txt  TCPClient.cpp  TCPClient.h  main.cpp
TCPServer/: CMakeLists.txt  TCPServer.cpp  TCPServer.h  main.cpp
TCPServer/DbLib/: CMakeLists.txt  db.cpp  db.h
TCPServer/database/: chat.db
TCPServer/db/: CMakeLists.txt  db.cpp  db.h
TCPServer/settings/: settings.xml
